Put JAR files into "lib" subdirectory. [2661]
This cleans up the user's system directory a decent amount.